--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<h3>Hello World!!!!!</h3>
+<h1>Andrii Kolesnik</h1>
+<h2>Тут будет моя страничка<h2>
+<p>А пока посмотрите <a href="sh/index.html">шпаргалку</a></p>
