--- a/sh/acid.html
+++ b/sh/acid.html
@@ -9,7 +9,7 @@
     Свойства гарантирующие надежную обработку транзакций.<br><br>
     <b>Atomicity (Атомарность):</b> Транзакция - единая операция, которая либо выполняется полностью, либо не выполняется вовсе.<br><br>
     <b>Consistency (Согласованность):</b> После выполнения транзакции будет допустимое (согласованное) состояние базы данных.<br><br>
-    <b><a href=transaction_isolation.html>Isolation (Изоляция):</a></b> Параллельные транзакции не должны влиять друг на друга.<br><br>
+    <b><a href=trans_isolation.html>Isolation (Изоляция):</a></b> Параллельные транзакции не должны влиять друг на друга.<br><br>
     <b>Durability (Долговечность):</b> Результаты транзакции сохраняются.
 </body>
 </html>
