--- a/sh/collections.html
+++ b/sh/collections.html
@@ -6,6 +6,6 @@
     <title>Коллекции</title>
 </head>
 <body>
-    <img src="Pictures/collections.png" width="100%">
+    <img src="pictures/collections.png" width="100%">
 </body>
 </html>
