--- a/sh/index.html
+++ b/sh/index.html
@@ -23,7 +23,7 @@
 			<a href=jdbc.html>JDBC</a><br>
 			<a href=hibernate/hibernate.html>Hibernate</a><br>
 			<a href=acid.html>ACID</a><br>
-			<a href=trans_isolation.html>Степени изоляции транзакций</a><br>
+			<a href=transaction_isolation.html>Степени изоляции транзакций</a><br>
 			<a href=unit_tests.html>Unit Tests</a><br>
 			<a href=spring.html>Spring</a><br>
 			<a href=solid.html>SOLID</a><br>
