Layout in progress

--- a/sh/client_serv/client_serv.html
+++ b/sh/client_serv/client_serv.html
@@ -4,13 +4,17 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Client - Server</title>
+	<link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
 	<div style='text-align:center; width:100%'>
 		<a href=rest.html><b>REST API</b></a> Архитектурный стиль проектирования<br>
-		<a href=soap.html><b>SOAP</b></a> Протокол<br>
+		<a href=soap.html><b>SOAP</b></a> Протокол (привязан в XML)<br>
 		<a href=graphql.html><b>GraphQL</b></a> Язык запросов<br>
 		<a href=websockets.html><b>WebSockets</b></a> Протокол<br>
+		RPC remote procedure call
+		OpenAPI - спецификация
+		Swagger - реализация
 	</div>
 </body>
 </html>
