--- a/sh/coco.html
+++ b/sh/coco.html
@@ -4,29 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Low Coupling, High Cohesion</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    <b>Low Coupling (между модулями)</b><br>
-    Степень взаимозависимости модулей (interdependence)<br>
-    Сколько один класс знает о другом.<br>
-    Непосредственная связь "тесно связаны" (tightly coupled)<br>
-    Связь через <b>интерфейсы</b> называют "слабо связанный" (loosely coupled)<br>
-    <b>Types of Coupling</b> (from best to worst)<br>
-    Data Coupling<br>
-    Control Coupling<br>
-    External Coupling<br>
-    Common Coupling<br>
-    Content Coupling<br><br>
+    <h1>Low Coupling (между модулями)</h1>
+    <div class="tab">
+        Степень взаимозависимости модулей (interdependence)<br>
+        Сколько один класс знает о другом.<br>
+        Непосредственная связь "тесно связаны" (tightly coupled)<br>
+        Связь через <b>интерфейсы</b> называют "слабо связанный" (loosely coupled)<br>
+        <b>Types of Coupling</b> (from best to worst)<br>
+        Data Coupling<br>
+        Control Coupling<br>
+        External Coupling<br>
+        Common Coupling<br>
+        Content Coupling<br><br>
+    </div>
 
-    <b>High Cohesion (внутри модуля)</b><br>
-    Насколько все элементы направлены на одну чётко определённую задачу<br>
-    <b>Types of Cohesion</b> (from high to low)<br>
-    Functional Cohesion<br>
-    Sequentional Cohesion<br>
-    Communicational Cohesion<br>
-    Procedural Cohesion<br>
-    Temporal Cohesion<br>
-    Logical Cohesion<br>
-    Conincidental Cohesion<br>
+    <h1>High Cohesion (внутри модуля)</h1>
+    <div class="tab">
+        Насколько все элементы направлены на одну чётко определённую задачу<br>
+        <b>Types of Cohesion</b> (from high to low)<br>
+        Functional Cohesion<br>
+        Sequentional Cohesion<br>
+        Communicational Cohesion<br>
+        Procedural Cohesion<br>
+        Temporal Cohesion<br>
+        Logical Cohesion<br>
+        Conincidental Cohesion<br>
+    </div>
 </body>
 </html>
