--- a/sh/equals_hashcode.html
+++ b/sh/equals_hashcode.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equals, hashCode</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <pre>
@@ -36,17 +37,21 @@
     <br>
     <b>POJO и коллекции обрабатываются так же само!</b><br>
     <br>
-    Правила <b>equals:</b><br>
-    <b>Рефлексивность:</b> x.equals(x) возвращает true.<br>
-    <b>Симметричность:</b> Если x.equals(y) возвращает true, то и y.equals(x) вернёт true.<br>
-    <b>Транзитивность:</b> Если x.equals(y) и y.equals(z) возвращают true, то и x.equals(z) вернёт true.<br>
-    <b>Консистентность:</b> Если объекты x и y не изменяются, то вызовы x.equals(y) должны возвращать один и тот же результат.<br>
-    <b>Неравенство null:</b> x.equals(null) возвращает false<br><br>
+    <h1>Правила equals:</h1>
+    <div class="tab">
+        <b>Рефлексивность:</b> x.equals(x) возвращает true.<br>
+        <b>Симметричность:</b> Если x.equals(y) возвращает true, то и y.equals(x) вернёт true.<br>
+        <b>Транзитивность:</b> Если x.equals(y) и y.equals(z) возвращают true, то и x.equals(z) вернёт true.<br>
+        <b>Консистентность:</b> Если объекты x и y не изменяются, то вызовы x.equals(y) должны возвращать один и тот же результат.<br>
+        <b>Неравенство null:</b> x.equals(null) возвращает false
+    </div><br>
 
-    Правила <b>hashCode():</b><br>
-    <b>Согласованность:</b> Если объекты равны по equals() - их хэш-коды тоже равными.<br>
-    Но не наоборот! <b>(коллизия)</b><br>
-    <b>Повторяемость:</b> hashCode() Для одного и того же объекта возвращает одно и то же, если объект не изменялся.<br>
-    <b>Равномерное распределение</b><br>
+    <h1>Правила hashCode():</h1>
+    <div class="tab">
+        <b>Согласованность:</b> Если объекты равны по equals() - их хэш-коды тоже равными.<br>
+        Но не наоборот! <b>(коллизия)</b><br>
+        <b>Повторяемость:</b> hashCode() Для одного и того же объекта возвращает одно и то же, если объект не изменялся.<br>
+        <b>Равномерное распределение</b>
+    </div>
 </body>
 </html>
