--- a/sh/patterns/behavioral/behavioral.html
+++ b/sh/patterns/behavioral/behavioral.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Behavioral</title>
+    <link rel="stylesheet" href="../../css/main.css">
 </head>
 <body>
     <b>Chain of Responsibility:</b> позволяет создавать цепочки объектов, которые могут обрабатывать запросы поочередно, пока один из них не обработает запрос.<br>
