--- a/sh/patterns/creational/creational.html
+++ b/sh/patterns/creational/creational.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creational</title>
+    <link rel="stylesheet" href="../../css/main.css">
 </head>
 <body>
     <b>Builder</b> используется для создания объектов с составными частями (комплексными объектами), позволяя создавать различные конфигурации объектов, скрывая детали их создания.<br>
