--- a/sh/solid.html
+++ b/sh/solid.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SOLID</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    Акроним<br>
-    <b>Single Responsibility</b> Каждый класс (модуль) должен иметь (инкапсулировать) одну четко определенную ответственность. Одну причину для изменения.<br>
-    <b>Open-Closed</b> Сущности должны быть открыты для расширения, но закрыты для изменения.<br>
-    <b>Liskov Substitution</b> Объекты подкласса должны быть заменяемы объектами суперкласса без нарушения правильности программы.<br>
-    <b>Interface Segregation</b> Интерфейсы должны быть мелкими и специфичными. Должны содержать только необходимые методы.<br>
-    <b>Dependency Inversion</b> Высокоуровневые модули не должны зависеть от низкоуровневых модулей. Оба типа модулей должны зависеть от абстракций.<br>
+    <h1>Акроним SOLID</h1>
+    <div class="tab">
+        <b>Single Responsibility</b> Каждый класс (модуль) должен иметь (инкапсулировать) одну четко определенную ответственность. Одну причину для изменения.<br>
+        <b>Open-Closed</b> Сущности должны быть открыты для расширения, но закрыты для изменения.<br>
+        <b>Liskov Substitution</b> Объекты подкласса должны быть заменяемы объектами суперкласса без нарушения правильности программы.<br>
+        <b>Interface Segregation</b> Интерфейсы должны быть мелкими и специфичными. Должны содержать только необходимые методы.<br>
+        <b>Dependency Inversion</b> Высокоуровневые модули не должны зависеть от низкоуровневых модулей. Оба типа модулей должны зависеть от абстракций.<br>
+    </div>
 </body>
 </html>
