--- a/sh/acid.html
+++ b/sh/acid.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACID</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    Свойства гарантирующие надежную обработку транзакций.<br><br>
-    <b>Atomicity (Атомарность):</b> Транзакция - единая операция, которая либо выполняется полностью, либо не выполняется вовсе.<br><br>
-    <b>Consistency (Согласованность):</b> После выполнения транзакции будет допустимое (согласованное) состояние базы данных.<br><br>
-    <b><a href=transaction_isolation.html>Isolation (Изоляция):</a></b> Параллельные транзакции не должны влиять друг на друга.<br><br>
-    <b>Durability (Долговечность):</b> Результаты транзакции сохраняются.
+    <h1>Свойства гарантирующие надежную обработку транзакций.</h1>
+    <div class="tab">
+        <b>Atomicity (Атомарность):</b> Транзакция - единая операция, которая либо выполняется полностью, либо не выполняется вовсе.<br>
+        <b>Consistency (Согласованность):</b> После выполнения транзакции будет допустимое (согласованное) состояние базы данных.<br>
+        <b><a href=transaction_isolation.html>Isolation (Изоляция):</a></b> Параллельные транзакции не должны влиять друг на друга.<br>
+        <b>Durability (Долговечность):</b> Результаты транзакции сохраняются.
+    </div>
 </body>
 </html>
