--- a/sh/generics.html
+++ b/sh/generics.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Коллекции</title>
+	<link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
 	Дженериками (обобщёниями) могут быть классы, интерфейсы и методы<br>
