--- a/sh/index.html
+++ b/sh/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Java Шпаргалка</title>
+	<link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
 	<div style='text-align:center; width:100%'>
