--- a/sh/jdbc.html
+++ b/sh/jdbc.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JDBC</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    1 Connection<br>
+    1. Connection<br>
     PreparedStatement<br>
     ResultSet<br>
     <br>
-    2 List<Item> items = jdbcTemplate.query("SELECT * FROM item", new BeanPropertyRowMapper<>(Item.class));<br>
+    2. List<Item> items = jdbcTemplate.query("SELECT * FROM item", new BeanPropertyRowMapper<>(Item.class));<br>
     <br>
-    3 PreparedStatementCreatorFactory pscf = new PreparedStatementCreatorFactory("Insert ...", Types.VARCHAR, Type.LONG,);<br>
+    3. PreparedStatementCreatorFactory pscf = new PreparedStatementCreatorFactory("Insert ...", Types.VARCHAR, Type.LONG,);<br>
     pscf.setReturnGeneratedKeys(true);<br>
     PreparedStatementCreator psc = pscf.newPreparedStatementCreator(Arrays.asList(var1, var2));<br>
     GeneratedKeyHolder keyHolder = new GeneratedKeyHolder();<br>
