--- a/sh/multi_threading.html
+++ b/sh/multi_threading.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Многопоточность</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <b>Volatile</b> гарантирует что каждый поток работает непосредственно с этой переменной. Не с кешем.<br>
