--- a/sh/patterns/structural/structural.html
+++ b/sh/patterns/structural/structural.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Structural</title>
+    <link rel="stylesheet" href="../../css/main.css">
 </head>
 <body>
     <b><a href=adapter.html>Adapter</a></b> для преобразования к определённому интерфейсу.<br><br>
