common moved, security added

--- a/sh/index.html
+++ b/sh/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE htmll>
-<htmll lang="ru">
+<!DOCTYPE html>
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +9,9 @@
 <body>
 	<div style='text-align:center; width:100%'>
 		<b>
-			<a href=common_java.html>Java общее</a><br>
+			<a href=common.html>Общие</a><br>
 			<a href=memory.html>Память и GC</a><br>
+			<a href=security/security.html>Security</a><br>
 			<a href=exceptions/exceptions.html>Exceptions</a><br>
 			<a href=object.html>Методы Object</a><br>
 			<a href=coco.html>Low Coupling, High Cohesion</a><br>
@@ -33,10 +34,9 @@
 			<a href=kafka.html>Kafka</a><br>
 			<a href=microservices.html>Микросервисы</a><br>
 			<a href=patterns/patterns.html>Шаблоны проектирования</a><br>
-			<a href=common/common.html>Общие вопросы</a><br>
 			<a href=https://metanit.com/java/tutorial>Метанит JAVA</a><br>
 			<a href=https://chat.openai.com/>GPT-chat</a><br>
 		</b>
 	</div>
 </body>
-</htmll>
+</html>
