--- a/sh/security/oauth2.html
+++ b/sh/security/oauth2.html
@@ -3,29 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Общие вопросы</title>
+    <title>Oauth 2.0, JWT</title>
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-    <b>Для какого проекта выбереш монолит, для какого - микросервисы?</b><br>
-    <b>Что такое хороший код? Как определить?</b><br>
-    <b>Что такое хорошая архитектура? Как определить?</b><br>
-    <b>Реляционные и нереляционные базы данных. Преимущества и недостатки.</b><br>
-    Реляционные преимущество - транзакции<br>
-    <b>Как ты учишся? Узнаёш новое?</b><br>
-    <br>
-    <h1>CODE SMELLS:</h1>
-    <div class="tab">
-        Дублированный код<br>
-        Мёртвый код<br>
-        Длинные методы 10 строк, 1 экран(30 строк) <br>
-        Длинный список параметров > 3<br>
-        Комментарии<br>
-        Ненужные примитивные переменные - ?<br>
-        Сгустки данных
-    </div>
-    <br>
-    <h1>OAuth 2.0</h1> — протокол АВТОРИЗАЦИИ, позволяющий выдать одному сервису (приложению) права на доступ к ресурсам пользователя на другом сервисе<br>
+    <h1>OAuth 2.0</h1>
+    Протокол АВТОРИЗАЦИИ, позволяющий выдать одному сервису (приложению) права на доступ к ресурсам пользователя на другом сервисе<br>
     <div class="tab">
         <b>0. Разработчик регистрирует приложение</b> (Клиент) в Google Console (Сервис) и получает Client Id и Client Secret<br>
         <b>1. Клиент формирует GET запрос на Сервис</b><br>
@@ -46,9 +29,17 @@
             code=AUTHORIZATION_CODE<br>
             grant_type=authorization_code<br>
         </div>
-        <b>и получает Access Token и Refresh Token</b>
+        <b>и получает JWT Access Token и Refresh Token</b>
     </div>
     <br>
+
+    <h1>JWT (JSON Web Token)</h1>
+    <div class="tab">
+        <b>Header:</b> {"alg": "HS256", "typ": "JWT"}<br>
+        <b>Payload:</b> {"sub": "1234567890", "name": "John Doe", "iat": 1516239022}<br>
+        <b>Signature:</b> SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c<br>
+        Кодируется Base64
+    </div>
 
 </body>
 </html>
